--- a/requirements.txt
+++ b/requirements.txt
@@ -1,261 +1,12 @@
-absl-py==2.1.0
-affine==2.4.0
-altair==5.3.0
-anaconda-anon-usage @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3eler6mjxh/croot/anaconda-anon-usage_1710965076906/work
-anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1717693030552/work
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
-archspec @ file:///home/conda/feedstock_root/build_artifacts/archspec_1708969572489/work
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1692818318753/work
-argon2-cffi-bindings @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi-bindings_1695386618041/work
-arrow @ file:///home/conda/feedstock_root/build_artifacts/arrow_1696128962909/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-astunparse==1.6.3
-async-lru @ file:///home/conda/feedstock_root/build_artifacts/async-lru_1690563019058/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1704011227531/work
-Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1702422572539/work
-backcall==0.2.0
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1705564648255/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1696630167146/work
-blinker==1.8.2
+beautifulsoup4==4.12.3
 bokeh==3.5.0
-boltons @ file:///home/conda/feedstock_root/build_artifacts/boltons_1711936407380/work
-Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1695989934239/work
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
-cachetools==5.4.0
-catboost==1.2.5
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1720457958366/work/certifi
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1696001836291/work
-cfgrib==0.9.13.0
-cftime==1.6.4
-chardet @ file:///Users/runner/miniforge3/conda-bld/chardet_1695468775373/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1698833585322/work
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1697464713350/work
-cmdstanpy @ file:///home/conda/feedstock_root/build_artifacts/cmdstanpy_1718667556839/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-conda @ file:///Users/runner/miniforge3/conda-bld/conda_1722273215763/work
-conda-content-trust @ file:///home/conda/feedstock_root/build_artifacts/conda-content-trust_1693490762241/work
-conda-libmamba-solver @ file:///home/conda/feedstock_root/build_artifacts/conda-libmamba-solver_1721292473987/work/src
-conda-package-handling @ file:///home/conda/feedstock_root/build_artifacts/conda-package-handling_1717678605937/work
-conda_package_streaming @ file:///home/conda/feedstock_root/build_artifacts/conda-package-streaming_1717678526951/work
-contourpy @ file:///Users/runner/miniforge3/conda-bld/contourpy_1712429967442/work
-cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography-split_1721521291378/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1696677705766/work
-Cython==3.0.10
-dask==2024.6.2
-dbfread==2.0.7
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1719378692445/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-distro @ file:///home/conda/feedstock_root/build_artifacts/distro_1704321475663/work
-docopt==0.6.2
-eccodes==1.7.1
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
-et-xmlfile==1.1.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1718477020893/work/dist
-findlibs==0.0.5
-flatbuffers==24.3.25
-fonttools @ file:///Users/runner/miniforge3/conda-bld/fonttools_1720359084507/work
-fqdn @ file:///home/conda/feedstock_root/build_artifacts/fqdn_1638810296540/work/dist
-frozendict @ file:///Users/runner/miniforge3/conda-bld/frozendict_1715092799204/work
-fsspec==2024.6.1
-gast==0.6.0
-geopandas==1.0.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-pasta==0.2.0
-graphviz==0.20.3
-grids==0.15
-grpcio==1.64.1
-h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1664132893548/work
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1634280454336/work
-h5py==3.11.0
-holidays @ file:///home/conda/feedstock_root/build_artifacts/holidays_1721093452602/work
-hpack==4.0.0
-httpcore @ file:///home/conda/feedstock_root/build_artifacts/httpcore_1711596990900/work
-httpx @ file:///home/conda/feedstock_root/build_artifacts/httpx_1708530890843/work
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1619110129307/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1713279365350/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1721856510709/work
-importlib_resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1711040877059/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
-ipython==8.12.3
-ipython_genutils @ file:///home/conda/feedstock_root/build_artifacts/ipython_genutils_1716278396992/work
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1716897651763/work
-isoduration @ file:///home/conda/feedstock_root/build_artifacts/isoduration_1638811571363/work/dist
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1715127149914/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1714665484399/work
-json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1712986206667/work
-jsonpatch @ file:///home/conda/feedstock_root/build_artifacts/jsonpatch_1695536281965/work
-jsonpointer @ file:///Users/runner/miniforge3/conda-bld/jsonpointer_1718283413196/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1720529478715/work
-jsonschema-specifications @ file:///tmp/tmpkv1z7p57/src
-jupyter @ file:///home/conda/feedstock_root/build_artifacts/jupyter_1696255489086/work
-jupyter-console @ file:///home/conda/feedstock_root/build_artifacts/jupyter_console_1678118109161/work
-jupyter-contrib-core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_contrib_core_1657548529421/work
-jupyter-contrib-nbextensions @ file:///home/conda/feedstock_root/build_artifacts/jupyter_contrib_nbextensions_1670068802953/work
-jupyter-events @ file:///home/conda/feedstock_root/build_artifacts/jupyter_events_1710805637316/work
-jupyter-highlight-selected-word @ file:///home/conda/feedstock_root/build_artifacts/jupyter_highlight_selected_word_1695322379939/work
-jupyter-latex-envs @ file:///home/conda/feedstock_root/build_artifacts/jupyter_latex_envs_1614852190293/work
-jupyter-lsp @ file:///home/conda/feedstock_root/build_artifacts/jupyter-lsp-meta_1712707420468/work/jupyter-lsp
-jupyter-nbextensions-configurator @ file:///home/conda/feedstock_root/build_artifacts/jupyter_nbextensions_configurator_1670793770953/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1673615989977/work
-jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1710257334907/work
-jupyter_server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1720816649297/work
-jupyter_server_terminals @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_terminals_1710262634903/work
-jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1721396525904/work
-jupyterlab_pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1707149102966/work
-jupyterlab_server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server-split_1721163288448/work
-jupyterlab_widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1716891641122/work
-keras==3.4.1
-kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1695380058985/work
-libclang==18.1.1
-libmambapy @ file:///Users/runner/miniforge3/conda-bld/mamba-split_1711394373090/work/libmambapy
-lightgbm @ file:///Users/runner/miniforge3/conda-bld/lightgbm_1722265903429/work
-llvmlite==0.43.0
-locket==1.0.0
-lxml @ file:///Users/runner/miniforge3/conda-bld/lxml_1715598459300/work
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1706900210234/work
+joblib==1.4.2
 matplotlib==3.9.1
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-mdurl==0.1.2
-menuinst @ file:///Users/runner/miniforge3/conda-bld/menuinst_1718088362305/work
-mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1698947099619/work
-ml-dtypes==0.3.2
-multipledispatch @ file:///home/conda/feedstock_root/build_artifacts/multipledispatch_1721907546485/work
-munkres==1.1.4
-namex==0.0.8
-natsort @ file:///home/conda/feedstock_root/build_artifacts/natsort_1687263093793/work
-nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1716838762700/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1710317608672/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1718135430380/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1712238998817/work
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-netCDF4==1.7.1.post1
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1715848908871/work
-notebook_shim @ file:///home/conda/feedstock_root/build_artifacts/notebook-shim_1707957777232/work
-numba @ file:///Users/runner/miniforge3/conda-bld/numba_1718888161786/work
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1707225640867/work/dist/numpy-1.26.4-cp311-cp311-macosx_11_0_arm64.whl#sha256=b62b8b824024855c3eb209bd45bfcf60bc9a11b94cbf9d5b7b25dc503021e672
-openpyxl==3.1.4
-opt-einsum==3.3.0
-optree==0.11.0
-overrides @ file:///home/conda/feedstock_root/build_artifacts/overrides_1706394519472/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
-pandas @ file:///Users/runner/miniforge3/conda-bld/pandas_1715897646986/work
-pandas-flavor @ file:///home/conda/feedstock_root/build_artifacts/pandas-flavor_1699047263912/work
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-partd==1.4.2
-patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1704469236901/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1719903580766/work
-pipreqs==0.5.0
-pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1694617248815/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
-plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1721758163679/work
-pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1713667077545/work
-pmdarima==2.0.4
-prometheus_client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1707932675456/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
-prophet @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_2enbhzq__a/croot/prophet_1718022785156/work
-protobuf==4.25.3
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1719274589453/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
-pyaml==24.4.0
-pyarrow==17.0.0
-pycosat @ file:///Users/runner/miniforge3/conda-bld/pycosat_1696355847725/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1711811537435/work
-pydap==3.4.1
-pydeck==0.9.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-pyjanitor @ file:///home/conda/feedstock_root/build_artifacts/pyjanitor_1711001072245/work
-pyobjc-core @ file:///Users/runner/miniforge3/conda-bld/pyobjc-core_1718171516399/work
-pyobjc-framework-Cocoa @ file:///Users/runner/miniforge3/conda-bld/pyobjc-framework-cocoa_1718645441443/work
-pyogrio==0.9.0
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1709721012883/work
-pyproj==3.6.1
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-python-json-logger @ file:///home/conda/feedstock_root/build_artifacts/python-json-logger_1677079630776/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
-PyYAML @ file:///Users/runner/miniforge3/conda-bld/pyyaml_1695373486380/work
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1715024416831/work
-qtconsole @ file:///home/conda/feedstock_root/build_artifacts/qtconsole-base_1714942934316/work
-QtPy @ file:///home/conda/feedstock_root/build_artifacts/qtpy_1698112029416/work
-rasterio==1.3.10
-referencing @ file:///home/conda/feedstock_root/build_artifacts/referencing_1714619483868/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1717057054362/work
-rfc3339-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3339-validator_1638811747357/work
-rfc3986-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3986-validator_1598024191506/work
-rich==13.7.1
-rpds-py @ file:///Users/runner/miniforge3/conda-bld/rpds-py_1721860994250/work
-ruamel.yaml @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml_1707298177423/work
-ruamel.yaml.clib @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml.clib_1707314793681/work
+numpy==2.0.1
+pandas==2.2.2
+prophet==1.1.5
+Requests==2.32.3
 SCALECAST==0.19.8
-scikit-learn @ file:///Users/runner/miniforge3/conda-bld/scikit-learn_1719998112149/work/dist/scikit_learn-1.5.1-cp311-cp311-macosx_11_0_arm64.whl#sha256=222c30e646a03424700a27e8e0d5f9094a71f2163f1e992e7ae0d5229a3687f7
-scikit-optimize==0.10.2
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy-split_1720323042548/work/dist/scipy-1.14.0-cp311-cp311-macosx_11_0_arm64.whl#sha256=925209adde85497f1731f481b87217b9ee58bdeb079b7fc601ed3641afbeee73
-seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1714494649443/work
-Send2Trash @ file:///Users/runner/miniforge3/conda-bld/send2trash_1712585336584/work
-shap @ file:///Users/runner/miniforge3/conda-bld/shap_1715196518864/work
-shapely==2.0.4
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-slicer @ file:///home/conda/feedstock_root/build_artifacts/slicer_1710029110974/work
-smmap==5.0.1
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1708952932303/work
-snuggs==1.4.7
-soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1693929250441/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-stanio @ file:///home/conda/feedstock_root/build_artifacts/stanio_1720528081340/work
-statsmodels @ file:///Users/runner/miniforge3/conda-bld/statsmodels_1715941272213/work
+scipy==1.14.0
+seaborn==0.13.2
 streamlit==1.37.0
-tbats==1.1.3
-tenacity==8.5.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.2
-tensorflow-io-gcs-filesystem==0.37.1
-tensorflow-macos==2.16.2
-tensorflow-metal==1.1.0
-termcolor==2.4.0
-terminado @ file:///Users/runner/miniforge3/conda-bld/terminado_1710263781917/work
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1714400101435/work
-tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1713974937325/work
-toml==0.10.2
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-toolz==0.12.1
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1717722724710/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1714854870413/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-truststore @ file:///home/conda/feedstock_root/build_artifacts/truststore_1694154605758/work
-types-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/types-python-dateutil_1710589910274/work
-typing-utils @ file:///home/conda/feedstock_root/build_artifacts/typing_utils_1622899189314/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1707747584337/work
-uri-template @ file:///home/conda/feedstock_root/build_artifacts/uri-template_1688655812972/work/dist
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1719391292974/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-webcolors @ file:///home/conda/feedstock_root/build_artifacts/webcolors_1717667289718/work
-webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1694681268211/work
-WebOb==1.8.7
-websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1713923384721/work
-Werkzeug==3.0.3
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1716891659446/work
-wrapt==1.16.0
-xarray @ file:///home/conda/feedstock_root/build_artifacts/xarray_1718302175066/work
-xgboost @ file:///home/conda/feedstock_root/build_artifacts/xgboost-split_1722296441201/work/python-package
-xlrd @ file:///home/conda/feedstock_root/build_artifacts/xlrd_1610224409810/work
-xyzservices==2024.6.0
-yarg==0.1.9
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1718013267051/work
-zstandard==0.23.0
