--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 beautifulsoup4==4.12.3
 bokeh==3.5.0
 joblib==1.4.2
-matplotlib==3.9.1
+matplotlib==3.9.1.post1
 numpy==2.0.1
 pandas==2.2.2
 prophet==1.1.5
